<resources>
    <string name="app_name">MARALAYSSECURITY</string>
    <string name="welcomeMsg">Добро пожаловать в MarAlAys</string>
    <string name="fingerDescription">коснитесь отпечатков</string>
    <string name="scamMsg">Сканируйте отпечатку палец пж</string>
    <string name="btnFinger">Сканировать отпечатку</string>
    <string name="btn_push_code">Запросить код подерждения</string>
    <string name="firstname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="lastname">Отчество</string>
    <string name="username">username</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="registration">Регистрироваться</string>
    <string name="channel_name">MARALAYSSECURITY</string>
    <string name="spinner_title">Выберите компанию</string>
    <string name="feedback">Обратная связь</string>
    <string name="help">Помощь</string>
    <string name="setting">Настройка</string>
    <string name="agreement">Правила использования</string>
    <string name="channel_description">Вы получите код для подверждения операцию, нажимите пожалуйста на кнопку открыть</string>
    <string name="wargning">К вашей учетке пытались получить доступ, если это вы, то нажимайте кнопку да,
    При нажатии на да, вам придется залогиниться еще раз а затем вести кодовое слово</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="expandable_text">Интсрукция по использованию приложение\n
    1. Ввод логин и пароля\n
    2. Сканирование отпечатки палец\n
    3. Сканирование QR-code который отображено на web странице\n
    4. При правильной QR-code вы получите доступ к сервису</string>
    <string name="feedback_info">Возникли проблемы, пишите нам: \n
        Нажимите на кнопка сообщить о проблеме
    </string>
</resources>