<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/registration"
        android:background="@drawable/background"
        tools:context=".Registration">

    <fragment android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:layout="@layout/header"
              android:layout_alignParentTop="true"
              class="ru.gui.components.fragments.Header"
        tools:ignore="Instantiatable" />


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:lineHeight="20dp"
                android:hint="@string/firstname"
                android:layout_marginBottom="20dp"
                android:textColorHint="@color/white"
                android:ems="10"
                android:id="@+id/firstname"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:textColorHint="@color/white"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:id="@+id/name"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/lastname"
                android:textColorHint="@color/white"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:id="@+id/lastname"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/username"
                android:layout_marginBottom="20dp"
                android:textColorHint="@color/white"
                android:ems="10"
                android:id="@+id/username_reg"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginBottom="20dp"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:ems="10"
                android:id="@+id/password_reg"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/repeat_password"
                android:textColorHint="@color/white"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:id="@+id/confirm_password_reg"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginBottom="20dp"
                android:id="@+id/choose_service"/>
        <Button
                android:text="@string/registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border"
                android:id="@+id/button"/>
    </LinearLayout>
</RelativeLayout>